--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Clash;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: rgb(245, 255, 252);
+  background-image: url(../public/RectangleL.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: soft-light; */
 }
-
+/* main {
+  background-color: rgb(245, 255, 252);
+  background-image: url(../public/RectangleL.png), url(../public/GlowsL.png),
+    url(../public/StarsL.png);
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-size: cover, cover, cover;
+  background-blend-mode: soft-light, normal, normal;
+} */
+@font-face {
+  font-family: Clash;
+  src: url(../public/ClashDisplay.ttf);
+}
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
